# toy_robot

./: CMakeLists.txt  README.md
data/: input.txt
include/: command_parser.h  toy_robot.h  toy_robot_properties.h
src/: command_parser.cpp  main.cpp  toy_robot.cpp
tests/: test_suite.cpp
